# connect-staging-extensions

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  extensions.json
.github/workflows/: connect-integration-tests.yml  extensions.yml  package-vulnerability-scanner.yml  publisher-command-center-otel.yml  publisher-command-center.yml  runtime-version-scanner.yml  usage-metrics-dashboard-otel.yml  usage-metrics-dashboard.yml
docs/: creating-a-custom-workflow.md
extensions/champion-dashboard/: README.md  app.py  manifest.json  pyproject.toml  requirements.txt
extensions/publisher-command-center/: .gitignore  CONTRIBUTING.md  app.py  index.html  manifest.json  package.json
extensions/publisher-command-center-otel/: .prettierignore  README.md  manifest.json  package-lock.json  pyproject.toml  requirements.txt  vite.config.js
extensions/publisher-command-center-otel/scss/: index.scss
extensions/publisher-command-center-otel/src/: index.js
extensions/publisher-command-center-otel/src/components/: About.js  Collaborators.js  DeleteModal.js  LockContentButton.js  Metrics.js  Releases.js  RenameModal.js  UnauthorizedView.js
extensions/publisher-command-center-otel/src/models/: Content.js  Contents.js
extensions/publisher-command-center-otel/src/views/: Layout.js
extensions/usage-metrics-dashboard/: .renvignore  (+2 more)
integration/: Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
integration/tests/posit/connect/: set_bootstrap_admin_email.py  test_deployments.py
scripts/: .gitignore  extension-list.ts  package-lock.json  package.json  tsconfig.json
(+31 files in other folders)
