[project]
name = "publisher-command-center"
version = "0.1.0"
description = "A dashboard for publishers to help manage and track their content"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cachetools>=5.5.1",
    "fastapi[standard]>=0.115.8",
    "opentelemetry-exporter-otlp-proto-http>=1.39.0",
    "opentelemetry-instrumentation-fastapi>=0.60b0",
    "posit-sdk>=0.8.0",
]
